--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EleganceEstate - Luxury Real Estate</title>
-    <meta name="description" content="Discover premium luxury real estate properties in the most desirable locations. EleganceEstate offers an exceptional collection of high-end properties." />
-    <meta name="author" content="EleganceEstate" />
+    <title>Food</title>
+    <meta name="description" content="Food" />
+    <meta name="author" content="Food" />
 
-    <meta property="og:title" content="EleganceEstate - Luxury Real Estate" />
-    <meta property="og:description" content="Discover premium luxury real estate properties in the most desirable locations." />
+    <meta property="og:title" content="weblibron - Food" />
+    <meta property="og:description" content="Food in the most desirable locations." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://images.unsplash.com/photo-1600596542815-ffad4c1539a9?ixlib=rb-4.0.3&auto=format&fit=crop&w=2070&q=80" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@eleganceestate" />
-    <meta name="twitter:image" content="https://images.unsplash.com/photo-1600596542815-ffad4c1539a9?ixlib=rb-4.0.3&auto=format&fit=crop&w=2070&q=80" />
+    <meta name="twitter:site" content="@weblibron" />
+    <meta name="twitter:image" content="" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,7 +25,7 @@
   <body>
     <div id="root"></div>
     <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
-    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
+    <!-- <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script> -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
