--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="description" content="Food" />
     <meta name="author" content="Food" />
 
-    <meta property="og:title" content="weblibron - Food" />
-    <meta property="og:description" content="Food in the most desirable locations." />
+    <meta property="og:title" content="Weblibron - Food" />
+    <meta property="og:description" content="Delicious and healthy food recipes for everyone." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://images.unsplash.com/photo-1598514982205-f36b96d1e8d4?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" />
 
